Fix primary nav not showing

--- a/tc-nav-react-demo/src/components/TopNav/styles.module.scss
+++ b/tc-nav-react-demo/src/components/TopNav/styles.module.scss
@@ -140,6 +140,10 @@
   display: flex;
 
   @include hide-mobile;
+
+  &.primaryNavContainerOpen {
+    display: flex;
+}
 }
 
 .primaryNav {
